[gd_scene load_steps=4 format=3 uid="uid://oavmobpu20x"]

[ext_resource type="PackedScene" uid="uid://dkpq67idphey1" path="res://src/ui/play_reload_button.tscn" id="1_1cc73"]
[ext_resource type="Script" path="res://src/ui/ui.gd" id="1_p4s1u"]

[sub_resource type="LabelSettings" id="LabelSettings_y4ftk"]
font_size = 100
font_color = Color(0, 0, 0, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_p4s1u")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
mouse_force_pass_scroll_events = false
mouse_default_cursor_shape = 2

[node name="TopHUDMarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="BackButton" type="Button" parent="VBoxContainer/TopHUDMarginContainer"]
custom_minimum_size = Vector2(160, 90)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "BACK"

[node name="LinesAvailableLabel" type="Label" parent="VBoxContainer/TopHUDMarginContainer"]
unique_name_in_owner = true
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 1
text = "\\ 2"
label_settings = SubResource("LabelSettings_y4ftk")

[node name="BottomHUDMarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
mouse_filter = 0
mouse_force_pass_scroll_events = false
mouse_default_cursor_shape = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 100

[node name="SkipButton" type="Button" parent="VBoxContainer/BottomHUDMarginContainer"]
custom_minimum_size = Vector2(160, 90)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "SKIP"

[node name="PlayReloadButton" parent="VBoxContainer/BottomHUDMarginContainer" instance=ExtResource("1_1cc73")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1

[node name="UndoButton" type="Button" parent="VBoxContainer/BottomHUDMarginContainer"]
custom_minimum_size = Vector2(160, 90)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "UNDO"

[connection signal="pressed" from="VBoxContainer/TopHUDMarginContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BottomHUDMarginContainer/SkipButton" to="." method="_on_skip_button_pressed"]
[connection signal="play_reload_toggled" from="VBoxContainer/BottomHUDMarginContainer/PlayReloadButton" to="." method="_on_play_reload_toggled"]
[connection signal="pressed" from="VBoxContainer/BottomHUDMarginContainer/UndoButton" to="." method="_on_undo_button_pressed"]
